# is-ilan

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  index.html  is_ilan.py  netlify.toml  pyproject.toml  server.py
.github/workflows/: ci.yml
netlify/functions/: applicants.js  search.js  typeahead.js
tests/: test_location_remote.py  test_parser.py  test_server.py
