[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "is-ilan"
version = "2.0.0"
description = "LinkedIn iş ilanı arama aracı (login gerektirmez)"
readme = "README.md"
requires-python = ">=3.7"

[tool.ruff]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"is_ilan.py" = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
